# pyHeart4Fish

./: LICENSE.md  Readme.html  Readme.md  heart_beat_GUI.py  heart_beat_GUI_MAIN.py  heart_beat_GUI_only_one_fish_multiprocessing.py  install_pyHeart4Fish.py  md2html.py  pyproject.toml  requirements.txt  setup.py  status.txt
Extra_scripts/: combine_excel_sheets.py  move_images_into_fish_folders.py
pyHeart4Fish.egg-info/: requires.txt
pyHeart4Fish_package/pyHeart4Fish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyHeart4Fish_scripts/: bright_field_whole_fish.py  fluorescence_heart_chambers.py  heart_beat_BRIGHT_FIELD_HB_only_one_fish_V1.0.0_GUI.py  heart_beat_GUI.py  heart_beat_GUI_only_one_fish_multiprocessing.py  pyHeart4Fish_App.py  requirements.txt  requirements_for_installation.txt
pyHeart4Fish_scripts/Extra_scripts/: avi2tif.py  check_query.py  desktop_shortcut.py  md2html.py  move_images_into_fish_folders.py  only_plot_heart_beat_curves.py
pyHeart4Fish_scripts/Test_data_github/avi_files_Results_example/: avi_files_Final_results.xlsx
pyHeart4Fish_scripts/Test_data_github/avi_files_Results_example/fish_1/: atrium.npy  atrium_area.npy  config_file_processed.json  fish_1_results.xlsx  ventricel.npy  ventricel_area.npy
pyHeart4Fish_scripts/Test_data_github/czi-files_Results_example/: czi-files_Final_results.xlsx
pyHeart4Fish_scripts/Test_data_github/tif_files_Results_example/: tif_files_Final_results.xlsx
pyHeart4Fish_v2.egg-info/: PKG-INFO  requires.txt  top_level.txt
(+30 files in other folders)
